# backend/infrastructure/persistence/schedule.go
@@ -2,6 +2,7 @@ package persistence
 
 import (
 	"fmt"
+	"github.com/BambooTuna/letustalk/backend/config"
 	"github.com/BambooTuna/letustalk/backend/domain"
 	"github.com/jinzhu/gorm"
 	"time"
@@ -43,26 +44,31 @@ func (s ScheduleRepositoryImpl) InsertSchedule(record domain.Schedule) error {
 	return s.DBSession.Create(&scheduleRecord).Error
 }
 
-func (s ScheduleRepositoryImpl) UpdateSchedule(record domain.Schedule) error {
-	var reservationId string
-	if record.Reservation != nil {
-		reservationId = record.Reservation.ReservationId
+func (s ScheduleRepositoryImpl) CreateReservation(record domain.Schedule) error {
+	if record.Reservation == nil {
+		return config.Error("Reservation is nil")
 	}
-	//scheduleRecord := ScheduleRecord{
-	//	ScheduleId:      record.ScheduleId,
-	//	ParentAccountId: record.ParentAccountId,
-	//	From:            record.From,
-	//	To:              record.To,
-	//	ReservationId:   reservationId,
-	//}
-
-	d := s.DBSession.Model(&ScheduleRecord{ScheduleId: record.ScheduleId}).Where("reservation_id IS NULL").Update("reservation_id", reservationId)
-	//a := s.DBSession.Save(&scheduleRecord)
-	if err := d.Error; err != nil {
-		return err
-	} else {
-		return nil
-	}
+	return s.DBSession.Transaction(func(tx *gorm.DB) error {
+		invoiceRecord := InvoiceRecord{
+			InvoiceId: record.Reservation.Invoice.InvoiceId,
+			Amount:    record.Reservation.Invoice.Amount,
+			Paid:      record.Reservation.Invoice.Paid,
+		}
+		reservationRecord := ReservationRecord{
+			ReservationId:  record.Reservation.ReservationId,
+			ChildAccountId: record.Reservation.ChildAccountId,
+			InvoiceId:      record.Reservation.Invoice.InvoiceId,
+		}
+		if err := tx.Create(invoiceRecord).Error; err != nil {
+			return err
+		} else if err := tx.Create(&reservationRecord).Error; err != nil {
+			return err
+		} else if err := tx.Model(&ScheduleRecord{ScheduleId: record.ScheduleId}).Where("reservation_id IS NULL").Update("reservation_id", record.Reservation.ReservationId).Error; err != nil {
+			return err
+		} else {
+			return nil
+		}
+	})
 }
 
 func (s ScheduleRepositoryImpl) ResolveByScheduleId(scheduleId string) (*domain.Schedule, error) {
@@ -101,7 +107,7 @@ func (s ScheduleRepositoryImpl) ResolveByScheduleId(scheduleId string) (*domain.
 	}
 }
 
-func (s ScheduleRepositoryImpl) ResolveByParentAccountId(parentAccountId string, from time.Time, to time.Time) []*domain.Schedule {
+func (s ScheduleRepositoryImpl) ResolveFreeScheduleByParentAccountId(parentAccountId string, from time.Time, to time.Time) []*domain.Schedule {
 	type ResultRecord struct {
 		ScheduleRecord
 		ScheduleDetailRecord
@@ -124,27 +130,26 @@ func (s ScheduleRepositoryImpl) ResolveByParentAccountId(parentAccountId string,
 	return r
 }
 
-func (s ScheduleRepositoryImpl) ResolveByMyAccountId(myAccountId string, from time.Time, to time.Time) []*domain.Schedule {
+func (s ScheduleRepositoryImpl) ResolveReservedScheduleByParentAccountId(parentAccountId string) []*domain.Schedule {
 	type ResultRecord struct {
 		ScheduleRecord
+		ScheduleDetailRecord
 		ReservationRecord
 		InvoiceRecord
 	}
 
-	sql := fmt.Sprintf("select schedule.*, reservation.*, invoice_detail.* from schedule left outer join reservation on schedule.reservation_id = reservation.reservation_id left outer join invoice_detail on reservation.invoice_id = invoice_detail.invoice_id Where schedule.parent_account_id = '%s' and schedule.from >= '%s' and schedule.to <= '%s' ORDER BY schedule.from asc", myAccountId, from, to)
+	sql := fmt.Sprintf("select schedule.*, schedule_detail.*, reservation.*, invoice_detail.* from schedule join reservation on schedule.reservation_id = reservation.reservation_id join invoice_detail on reservation.invoice_id = invoice_detail.invoice_id join schedule_detail on schedule.schedule_id = schedule_detail.schedule_id Where schedule.parent_account_id = '%s' ORDER BY schedule.from asc", parentAccountId)
 	var result []*ResultRecord
 	s.DBSession.Raw(sql).Scan(&result)
 	r := make([]*domain.Schedule, len(result))
 	for i, e := range result {
 		schedule := domain.Schedule{
-			ScheduleId:      e.ScheduleId,
-			ParentAccountId: e.ParentAccountId,
-			From:            e.From,
-			To:              e.To,
-			Detail:          domain.ScheduleDetail{},
-		}
-		if e.ScheduleRecord.ReservationId != "" {
-			schedule.Reservation = &domain.Reservation{
+			ScheduleId:      e.ScheduleRecord.ScheduleId,
+			ParentAccountId: e.ScheduleRecord.ParentAccountId,
+			From:            e.ScheduleRecord.From,
+			To:              e.ScheduleRecord.To,
+			Detail:          domain.ScheduleDetail{UnitPrice: e.ScheduleDetailRecord.UnitPrice},
+			Reservation: &domain.Reservation{
 				ReservationId:  e.ReservationRecord.ReservationId,
 				ChildAccountId: e.ReservationRecord.ChildAccountId,
 				Invoice: domain.Invoice{
@@ -152,13 +157,43 @@ func (s ScheduleRepositoryImpl) ResolveByMyAccountId(myAccountId string, from ti
 					Amount:    e.InvoiceRecord.Amount,
 					Paid:      e.InvoiceRecord.Paid,
 				},
-			}
+			},
 		}
 		r[i] = &schedule
 	}
 	return r
 }
 
-//func (s ScheduleRepositoryImpl) ResolveByChildAccountId(childAccountId string, from time.Time, to time.Time) []*domain.Schedule {
-//	return nil
-//}
+func (s ScheduleRepositoryImpl) ResolveReservedScheduleByChildAccountId(childAccountId string) []*domain.Schedule {
+	type ResultRecord struct {
+		ScheduleRecord
+		ScheduleDetailRecord
+		ReservationRecord
+		InvoiceRecord
+	}
+
+	sql := fmt.Sprintf("select schedule.*, schedule_detail.*, reservation.*, invoice_detail.* from schedule join reservation on schedule.reservation_id = reservation.reservation_id join invoice_detail on reservation.invoice_id = invoice_detail.invoice_id join schedule_detail on schedule.schedule_id = schedule_detail.schedule_id Where reservation.child_account_id = '%s' ORDER BY schedule.from asc", childAccountId)
+	var result []*ResultRecord
+	s.DBSession.Raw(sql).Scan(&result)
+	r := make([]*domain.Schedule, len(result))
+	for i, e := range result {
+		schedule := domain.Schedule{
+			ScheduleId:      e.ScheduleRecord.ScheduleId,
+			ParentAccountId: e.ScheduleRecord.ParentAccountId,
+			From:            e.ScheduleRecord.From,
+			To:              e.ScheduleRecord.To,
+			Detail:          domain.ScheduleDetail{UnitPrice: e.ScheduleDetailRecord.UnitPrice},
+			Reservation: &domain.Reservation{
+				ReservationId:  e.ReservationRecord.ReservationId,
+				ChildAccountId: e.ReservationRecord.ChildAccountId,
+				Invoice: domain.Invoice{
+					InvoiceId: e.InvoiceRecord.InvoiceId,
+					Amount:    e.InvoiceRecord.Amount,
+					Paid:      e.InvoiceRecord.Paid,
+				},
+			},
+		}
+		r[i] = &schedule
+	}
+	return r
+}
