# docs/swagger.json
@@ -320,7 +320,7 @@
                 }
             }
         },
-        "/reservations/{scheduleId}": {
+        "/reservations/reserve/{scheduleId}": {
             "post": {
                 "description": "Reserve",
                 "summary": "Reserve",
@@ -342,6 +342,72 @@
                 ],
                 "responses": {
                     "200": {},
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/json.ErrorMessageJson"
+                        }
+                    },
+                    "403": {}
+                }
+            }
+        },
+        "/reservations/reserved/child": {
+            "get": {
+                "description": "GetReservedReservationsByChildAccountId",
+                "summary": "GetReservedReservationsByChildAccountId",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "authorization header",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/interfaces.ReservedReservationResponseJson"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/json.ErrorMessageJson"
+                        }
+                    },
+                    "403": {}
+                }
+            }
+        },
+        "/reservations/reserved/parent": {
+            "get": {
+                "description": "GetReservedReservationsByParentAccountId",
+                "summary": "GetReservedReservationsByParentAccountId",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "authorization header",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/interfaces.ReservedReservationResponseJson"
+                            }
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -411,6 +477,38 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "interfaces.ReservedReservationResponseJson": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "childAccountId": {
+                    "type": "string"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "invoiceId": {
+                    "type": "string"
+                },
+                "paid": {
+                    "type": "boolean"
+                },
+                "parentAccountId": {
+                    "type": "string"
+                },
+                "reservationId": {
+                    "type": "string"
+                },
+                "scheduleId": {
+                    "type": "string"
+                },
+                "to": {
                     "type": "string"
                 }
             }
